# job_agent_app

./: .gitignore  Makefile  README.md  SETUP.md  pyproject.toml  test.db
.agent/: README.md
.agent/rules/: process-steward.md
.agent/skills/process-steward/: SKILL.md
.agent/skills/process-steward/resources/: RESPONSE_PROTOCOL.md
.agent/workflows/: ccr.md  help.md  next.md  plan.md  release.md  seed.md
.agents/: README.md
.agents/rules/: process-steward.md
.agents/skills/check/: SKILL.md
.agents/skills/process-steward/: SKILL.md
.agents/skills/process-steward/resources/: RESPONSE_PROTOCOL.md
.agents/workflows/: advise.md  archive.md  ccr.md  check.md  explore.md  help.md  next.md  plan.md  release.md  seed.md
app/: config.py  db.py  main.py  models.py
app/adapters/: __init__.py  arbetsformedlingen.py  base.py  run_ingestion.py
app/api/: __init__.py  export.py  jobs.py
app/services/: __init__.py  ingestion.py  scheduler.py
process/: PROCESS_REFERENCE.md  PROGRESS.md
process/diagrams/: DEVELOPMENT_PROCESS.puml  IDEATION_JOURNEY.puml  PROCESS_MAIN.puml  PROCESS_STEWARD_SEQUENCE.puml  STATE_MODEL.puml  STATE_MODEL_v2.puml  STATE_MODEL_v3.puml  USER_JOURNEY.puml
process/guides/: DEVELOPMENT_MANUAL.md  README.md
product/: ARCH.md  CONTRACTS.md  PRD.md
product/contracts/: CONTRACTS.md  openapi.yaml  schemas.py
product/diagrams/: IDEATION_PROCESS.puml  IDEATION_PROCESS_v2.puml
product/docs/: IDEATION_MANUAL.md
tests/: conftest.py  test_adapters.py  test_api_jobs.py  test_contract_conformance.py  test_export.py  test_health.py  test_ingestion.py  test_scheduler.py
