[project]
name = "agentic-fastapi-app"
version = "0.1.0"
description = "FastAPI app using a doc-driven Process Steward workflow."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi[standard]>=0.110",
]

[dependency-groups]
# uv installs the `dev` group by default (unless configured otherwise).
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.3",
  "mypy>=1.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
